{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 386,
  "lineage": "0f1c7c8f-5e7c-61bb-a6cc-6ec2eceba761",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0453ec754f44f9a4a",
            "arn": "arn:aws:ec2:us-east-1:961341552159:instance/i-00a23dd7fcd6a9297",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00a23dd7fcd6a9297",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-07a87213097c4c733",
            "private_dns": "ip-10-0-1-98.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.98",
            "public_ip": "34.229.107.61",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "tags": {
                  "Owner": "adeschamps"
                },
                "tags_all": {
                  "Owner": "adeschamps"
                },
                "throughput": 125,
                "volume_id": "vol-0cac821e644b9658f",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02ee832cbc6a9721a",
            "tags": {
              "Name": "adeschamps-ec2"
            },
            "tags_all": {
              "Name": "adeschamps-ec2",
              "Owner": "adeschamps"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d3ef0338e74a73ff"
            ]
          },
          "dependencies": [
            "aws_key_pair.adeschamps",
            "aws_security_group.sg",
            "aws_subnet.subnet-public",
            "aws_vpc.vpc",
            "data.aws_ami.amzn-linux-2023-ami",
            "data.aws_ec2_instance_types.free_tier_types"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:961341552159:internet-gateway/igw-05a1abf1f2ebe960f",
            "id": "igw-05a1abf1f2ebe960f",
            "owner_id": "961341552159",
            "tags_all": {
              "Owner": "adeschamps"
            },
            "vpc_id": "vpc-0aae008bf2408ec2a"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:961341552159:route-table/rtb-069a13270ec836536",
            "id": "rtb-069a13270ec836536",
            "owner_id": "961341552159",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05a1abf1f2ebe960f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "adeschamps-rt"
            },
            "tags_all": {
              "Name": "adeschamps-rt",
              "Owner": "adeschamps"
            },
            "timeouts": null,
            "vpc_id": "vpc-0aae008bf2408ec2a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.ig",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b0dec4f662adbb83",
            "route_table_id": "rtb-069a13270ec836536",
            "subnet_id": "subnet-00cf6da3fc349044f"
          },
          "dependencies": [
            "aws_internet_gateway.ig",
            "aws_route_table.rt",
            "aws_subnet.subnet-public",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02583f2f406719ca6",
            "route_table_id": "rtb-069a13270ec836536",
            "subnet_id": "subnet-02ee832cbc6a9721a"
          },
          "dependencies": [
            "aws_internet_gateway.ig",
            "aws_route_table.rt",
            "aws_subnet.subnet-public",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": "us-east-1c",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01b69516ed1e4767c",
            "route_table_id": "rtb-069a13270ec836536",
            "subnet_id": "subnet-0a6994e92e55f25ca"
          },
          "dependencies": [
            "aws_internet_gateway.ig",
            "aws_route_table.rt",
            "aws_subnet.subnet-public",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": "us-east-1d",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d8fea8e329389830",
            "route_table_id": "rtb-069a13270ec836536",
            "subnet_id": "subnet-061473751b7d62404"
          },
          "dependencies": [
            "aws_internet_gateway.ig",
            "aws_route_table.rt",
            "aws_subnet.subnet-public",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": "us-east-1e",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08b5883d7c36d51e0",
            "route_table_id": "rtb-069a13270ec836536",
            "subnet_id": "subnet-081f1ed3d598c67ad"
          },
          "dependencies": [
            "aws_internet_gateway.ig",
            "aws_route_table.rt",
            "aws_subnet.subnet-public",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": "us-east-1f",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d4bb5dbf57372551",
            "route_table_id": "rtb-069a13270ec836536",
            "subnet_id": "subnet-0b2dbb0dbd6211edf"
          },
          "dependencies": [
            "aws_internet_gateway.ig",
            "aws_route_table.rt",
            "aws_subnet.subnet-public",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:961341552159:security-group/sg-0d3ef0338e74a73ff",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-0d3ef0338e74a73ff",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "sg",
            "name_prefix": "",
            "owner_id": "961341552159",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "adeschamps-sg"
            },
            "tags_all": {
              "Name": "adeschamps-sg",
              "Owner": "adeschamps"
            },
            "timeouts": null,
            "vpc_id": "vpc-0aae008bf2408ec2a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:961341552159:subnet/subnet-00cf6da3fc349044f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00cf6da3fc349044f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "961341552159",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "adeschamps-subnet-public-f-1a"
            },
            "tags_all": {
              "Name": "adeschamps-subnet-public-f-1a",
              "Owner": "adeschamps"
            },
            "vpc_id": "vpc-0aae008bf2408ec2a"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:961341552159:subnet/subnet-02ee832cbc6a9721a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02ee832cbc6a9721a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "961341552159",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "adeschamps-subnet-public-f-1b"
            },
            "tags_all": {
              "Name": "adeschamps-subnet-public-f-1b",
              "Owner": "adeschamps"
            },
            "vpc_id": "vpc-0aae008bf2408ec2a"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": "us-east-1c",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:961341552159:subnet/subnet-0a6994e92e55f25ca",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a6994e92e55f25ca",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "961341552159",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "adeschamps-subnet-public-f-1c"
            },
            "tags_all": {
              "Name": "adeschamps-subnet-public-f-1c",
              "Owner": "adeschamps"
            },
            "vpc_id": "vpc-0aae008bf2408ec2a"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": "us-east-1d",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:961341552159:subnet/subnet-061473751b7d62404",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-061473751b7d62404",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "961341552159",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "adeschamps-subnet-public-f-1d"
            },
            "tags_all": {
              "Name": "adeschamps-subnet-public-f-1d",
              "Owner": "adeschamps"
            },
            "vpc_id": "vpc-0aae008bf2408ec2a"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": "us-east-1e",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:961341552159:subnet/subnet-081f1ed3d598c67ad",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-081f1ed3d598c67ad",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "961341552159",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "adeschamps-subnet-public-f-1e"
            },
            "tags_all": {
              "Name": "adeschamps-subnet-public-f-1e",
              "Owner": "adeschamps"
            },
            "vpc_id": "vpc-0aae008bf2408ec2a"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": "us-east-1f",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:961341552159:subnet/subnet-0b2dbb0dbd6211edf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b2dbb0dbd6211edf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "961341552159",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "adeschamps-subnet-public-f-1f"
            },
            "tags_all": {
              "Name": "adeschamps-subnet-public-f-1f",
              "Owner": "adeschamps"
            },
            "vpc_id": "vpc-0aae008bf2408ec2a"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:961341552159:vpc/vpc-0aae008bf2408ec2a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ca778a41a62af26a",
            "default_route_table_id": "rtb-05550ec6d4423811a",
            "default_security_group_id": "sg-06ea6ee0c9b67890f",
            "dhcp_options_id": "dopt-01ab08e3e3a98ad8a",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0aae008bf2408ec2a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05550ec6d4423811a",
            "owner_id": "961341552159",
            "tags": {
              "Name": "adeschamps-vpc"
            },
            "tags_all": {
              "Name": "adeschamps-vpc",
              "Owner": "adeschamps"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "sg-egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:961341552159:security-group-rule/sgr-0062bce31ffd6037d",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0062bce31ffd6037d",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0d3ef0338e74a73ff",
            "security_group_rule_id": "sgr-0062bce31ffd6037d",
            "tags": {
              "Name": "adeschamps-sg-egress"
            },
            "tags_all": {
              "Name": "adeschamps-sg-egress",
              "Owner": "adeschamps"
            },
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sg",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "sg-ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:961341552159:security-group-rule/sgr-0c38968d6c9935329",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0c38968d6c9935329",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0d3ef0338e74a73ff",
            "security_group_rule_id": "sgr-0c38968d6c9935329",
            "tags": {
              "Name": "adeschamps-sg-ingress"
            },
            "tags_all": {
              "Name": "adeschamps-sg-ingress",
              "Owner": "adeschamps"
            },
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sg",
            "aws_vpc.vpc"
          ]
        }
      ]
    }
  ]
}